# compilers

./: README.md  main.cpp
link_to_shared_library/: CMakeLists.txt  Makefile
log_functionality/: log.hpp  main.cpp
work_with_static_library/: log.cpp  log.hpp
